--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,13 @@
         <artifactId>junit-jupiter</artifactId>
         <version>5.10.2</version>
         <scope>test</scope>
-       </dependency> 
+       </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
